--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,23 @@ body {
     background-color: #2ECC40;
     box-shadow: 0 0 10px rgba(46, 204, 64, 0.5);
 }
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    color: #000000;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+
+}
+
+.button-on {
+    background-color: #587852;
+}
+
+.button-off {
+    background-color: #734340;
+}
